--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,8 @@
 
 {erl_opts, [debug_info, fail_on_warning]}.
 
+{src_dirs, ["./test"]}.
+
 {clean_files, ["ebin/*.beam", "erl_crash.dump", "doc/*.html", "doc/erlang.png", "doc/edoc-info", "doc/stylesheet.css"]}.
 
 {edoc_opts, [{index_columns, 1}, {sort_functions, false}, {preprocess, true}]}.
